(refactor) UUID -> String으로 전환